<resources>
    <string name="app_name">YoyoTuts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mytutos">My tuts</string>

    <string name="Social">Social</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>

    <string name="welcomeTitle">Welcome to YoyoTuts</string>
    <string name="favorites">Favorites</string>
    <string name="favoritesDesc">Place your favorites tuts here</string>
    <string name="favoritesThumb" translatable="false">channel_my</string>
    <string name="watchLater">Watch Later</string>
    <string name="watchLaterDesc">Place here tutorials to watch later</string>
    <string name="watchLaterThumb" translatable="false">channel_later</string>
    <string name="shareable">Shareable</string>
    <string name="shareableDesc">Place here tutorials to share with your friends</string>
    <string name="shareableThumb" translatable="false">channel_social</string>
    <string name="myTutsTitle">My Tutorials</string>
    <string name="myTutsDesc">Add tutorials to these playlists so you can remember them and sync them.</string>
    <string name="myTutosChannelTitle">My tutos</string>
    <string name="myTutosChannelDescription">Here are your tuts lists.</string>
    <string name="action_about">About…</string>
    <string name="action_thanks">Credits</string>
    <string name="dialog_title_remove">Delete</string>
    <string name="dialog_msg_remove_later">Do you really want to remove this video from your \'Watch Later\' list ?</string>
    <string name="dialog_msg_remove_share">Do you really want to remove this video from your \'Social\' list ?</string>
    <string name="dialog_msg_remove_favorite">Do you really want to remove this video from your \'Favorites\' list ?</string>
    <string name="msg_video_added">Video added</string>
    <string name="msg_video_removed">Video removed</string>
    <string name="dialog_title_about">About</string>
    <string name="dialog_msg_about">This app was designed to help you progress in your yoyo play and provide quick and easy access to your favorite tutorials.\n\tYou may start by opening the left menu and browsing your favorite sources of tutorials, when you find one you like, simply press one of the add buttons to add it to one of your tuts lists.\n\tOnce a few tuts are in your lists, you can share them with your friends.\n\tFor offline viewing, we recommend the excellent YTD app from dentex at : \n\thttp://dentex.github.io/apps/youtubedownloader</string>
    <string name="dialog_title_credits">Credits</string>
    <string name="dialog_msg_credits">The creators would like to thanks in no particular order : \n\n %s for their permission to index their content and overall awesomeness.</string>
    <string name="word_from">from</string>
    <string name="activity_label_settings">Settings</string>

    <string name="mailto_address">contact@aqamad.fr</string>
    <string name="mailto_message">Hello, i\'d like to suggest something for this great app !</string>
    <string name="mailto_bugmessage">Hello, I experienced something strange in the application, my database file is attached, now let me explain ....</string>
    <string name="action_reportbugs">Report bug</string>
    <string name="mailto_examplefriend">yourfriend@hisdomain.com</string>
    <string name="mailto_letmeshare">Let me share some tutorials with you from </string>
    <string name="mailto_letmesharesubject">Hi !\n Here are some tutorials that i thought would interest you, if you like them you can get more with this app :  </string>
    <string name="action_suggest">Suggestions</string>
    <string name="ihelp_later">= Add to \'Watch Later\'</string>
    <string name="ihelp_social">= Add to \'Social\'</string>
    <string name="ihelp_favorites">= Add to \'Favorites\'</string>
    <string name="ihelp_ishare">= Instant share</string>
    <string name="loading">Loading</string>
    <string name="search_hint">Search Tutorials</string>
    <string name="action_search">Search</string>
    <string name="action_help">Help</string>
    <string name="randomTut">Random tutorial :</string>
    <string name="tutStats">%d available tutorials.</string>
    <string name="search_results_title">Search results :</string>
    <string name="other_friends">Other Friends</string>
    <string name="ihelp_seen">= I\'ve seen this video</string>
    <string name="dialog_help_title">Help</string>
    <string name="randomFavorite">Random tutorial in Favorites :</string>
    <string name="randomFavoriteHelp">Add videos to \'Favorites\' and they will randomly appear here.</string>
    <string name="nextWatchLater">Next tutorial in Watch Later :</string>
    <string name="nextWatchLaterHelp">Add videos to \'Watch Later\' and they will appear here in the order you selected them (if you haven\'t seen them already).</string>
    <string name="prefUseTutorialsFrom">Use Tutorials from </string>
    <string name="settingsDbAndCache">Database and Cache</string>
    <string name="settingsRefreshFrequency">Playlist refresh frequency</string>
    <string name="settingsRefreshFrequencyHelp">Playlists refresh …</string>
    <string name="settingsClearCache">Clear Cache</string>
    <string name="settingsClearCacheHelp">Clear out your cached content, you will lose nothing at all, content should be refreshed on access, counts and durations might be off until next restart.</string>
    <string name="action_cat_help_and_credits">Help and credits</string>
    <string name="action_cat_settings_and_contact">Settings and bug reports</string>
    <string name="dialog_title_add">Add</string>
    <string name="dialog_title_mark">Mark</string>
    <string name="dialog_message_mark_unseen">Mark all videos as seen ?</string>
    <string name="dialog_message_mark_seen">Mark all videos as unseen ?</string>
    <string name="dialog_message_addall_share">Add all to share list ?</string>
    <string name="dialog_message_removeall_share">Remove all from share list ?</string>
    <string name="dialog_message_addall_favorites">Add all to favorites list ?</string>
    <string name="dialog_message_addall_later">Add all to watch later ?</string>
    <string name="dialog_message_removeall_favorites">Remove all from favorites list ?</string>
    <string name="dialog_message_removeall_later">Remove all from watch later ?</string>
    <string name="settingsExport">Export Personal Data</string>
    <string name="settingsImport">Import Personal Data</string>
    <string name="settingsExportHelp">Export your personal lists and seen videos for later import, think of it as a backup of your personal data.</string>
    <string name="settingsImportHelp">Import your personal lists and seen videos from previous export, think of it as restoring your personal data.</string>
    <string name="btn_pref_export_data" translatable="false">btnPrefExportPersonalData</string>
</resources>
