<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_report" android:title="@string/action_reportbugs"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_suggest" android:title="@string/action_suggest"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_credits" android:title="@string/action_thanks"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
