<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/instantHelp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/videoitem_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/btnSeen"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:iiv_color="@android:color/darker_gray"
                    app:iiv_icon="faw-check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ihelp_seen"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/btnLater"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:iiv_color="@android:color/darker_gray"
                    app:iiv_icon="faw-hourglass-half" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ihelp_later"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/btnShare"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:iiv_color="@android:color/darker_gray"
                    app:iiv_icon="oct-file-symlink-file" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ihelp_social"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/btnFavorites"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:iiv_color="@android:color/darker_gray"
                    app:iiv_icon="faw-heart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ihelp_favorites"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/shareVideoButton"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:iiv_color="@android:color/darker_gray"
                    app:iiv_icon="faw-share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ihelp_ishare"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Ok "
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />

</LinearLayout>